--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-scrapy~=2.5.0
-awesome-slugify~=1.6.5
-requests~=2.25.1
-pymongo~=3.11.4
+scrapy>=2.5.0
+awesome-slugify>=1.6.5
+requests>=2.25.1
+pymongo>=3.11.4
